--- a/hermes2d/examples/nernst-planck/CMakeLists.txt
+++ b/hermes2d/examples/nernst-planck/CMakeLists.txt
@@ -1,2 +1,2 @@
 #add_subdirectory(ipmc) TODO: Convert to new forms.
-#add_subdirectory(timedep-adapt) TODO: Convert to new forms.
+add_subdirectory(timedep-adapt) 
